@@ -1,5 +1,10 @@
-fix #11927: MusicXML export duplicate chordnames
-fix #11479: playback swing of quarter notes on counter beat
+14.aug (la)
+      - fix translation of context menu on keysig
+      - apply patches from Toby Smithe (#12108)
+
+10.aug (la)
+      - fix #11927: MusicXML export duplicate chordnames
+      - fix #11479: playback swing of quarter notes on counter beat
 
 ======== MuseScore 1.1 released ==============
 
